Grouped product view page design and functionality fixed, re-factors. multiple attribute assignement to the products added back and it's issues fixes. some style fixes and general refactors

--- a/WMS/Views/Theme/Default/Products/Create.cshtml
+++ b/WMS/Views/Theme/Default/Products/Create.cshtml
@@ -592,7 +592,7 @@
                     </div>
                 </div>
             </div>
-            @*<div class="input-group h-100 justify-content-center align-items-center simpleDiv" style=@(Model.ProductType!=Ganedata.Core.Entities.Enums.ProductKitTypeEnum.ProductByAttribute?"":"display:none")>
+            <div class="input-group h-100 justify-content-center align-items-center simpleDiv" style=@(Model.ProductType!=Ganedata.Core.Entities.Enums.ProductKitTypeEnum.ProductByAttribute?"":"display:none")>
                 @Html.Label("Product Attributes", htmlAttributes: new { @class = "col-md-4" })
                 <div class="col-md-8">
                     <div class="col-11 p-0 mt-1 pull-left">
@@ -603,7 +603,7 @@
                     </div>
 
                 </div>
-            </div>*@
+            </div>
             <div class="input-group h-100 justify-content-center align-items-center">
                 @Html.Label("Product Accounts", htmlAttributes: new { @class = "col-md-4" })
                 <div class="col-md-8">
