--- a/WMS/Views/Theme/Default/Products/_Attributes.cshtml
+++ b/WMS/Views/Theme/Default/Products/_Attributes.cshtml
@@ -10,7 +10,7 @@
         settings.SettingsPopup.HeaderFilter.MinWidth = 500;
 
         settings.Settings.ShowFilterBar = GridViewStatusBarMode.Visible;
-        settings.KeyFieldName = "AttributeValueId";
+        settings.KeyFieldName = "Id";
         settings.SettingsPager.Visible = true;
         settings.Settings.ShowGroupPanel = true;
         settings.Settings.ShowFilterRow = true;
