--- a/WarehouseEcommerce/Content/Theme/University/app/css/ui-settings.css
+++ b/WarehouseEcommerce/Content/Theme/University/app/css/ui-settings.css
@@ -132,13 +132,14 @@ h6,
 .prd_lst_boxouter .prdName,
 .nb_qcvboxwrap .col_Sec .col_lbl,
 .nb_qcvboxwrap .availibility,
-.nb_qcvboxwrap .sizeWrap p,
+.nb_qcvboxwrap .sizeWrap .title,
 .nb_qcvboxwrap .footSec .qty > span,
 .nb_qcvboxwrap .footSec .qty .sortBysec #nb_prdpg_qtysel_box,
 .nb_qcvboxwrap .footSec .qty .sortBysec #nb_prdpg_qtysel_box option,
 .nb_prd_det_rightsec .col_Sec .col_lbl,
 .nb_prd_det_rightsec .availibility,
-.nb_prd_det_rightsec .sizeWrap p,
+.nb_prd_det_rightsec .sizeWrap .title,
+.product-details-section .attribute-value p,
 .nb_prd_det_rightsec .footSec .qty > span,
 .nb_prd_det_rightsec .footSec .qty .sortBysec #nb_prdpg_qtysel_box,
 .nb_prd_det_rightsec .footSec .qty .sortBysec #nb_prdpg_qtysel_box option,
@@ -269,7 +270,8 @@ h6,
 .basketTotalwrap .shipping_radiosec .shippingtyp_list li [type="radio"]:checked + label:after,
 .basketTotalwrap .shipping_radiosec .shippingtyp_list li [type="radio"]:not(:checked) + label:after,
 .checkconfInner .checkconfirm_lftsec ul.paymentMthdlist li [type="radio"]:checked + label:after,
-.checkconfInner .checkconfirm_lftsec ul.paymentMthdlist li [type="radio"]:not(:checked) + label:after {
+.checkconfInner .checkconfirm_lftsec ul.paymentMthdlist li [type="radio"]:not(:checked) + label:after,
+.nav-tabs .nav-link .active-tab-bar {
     background-color: var(--secondary-color);
 }
 
@@ -379,7 +381,7 @@ nb_prdpg_fg label,
 .nb_qcvboxwrap .subContent,
 .nb_qcvboxwrap .col_Sec .col_lbl,
 .nb_qcvboxwrap .availibility,
-.nb_qcvboxwrap .sizeWrap p span,
+.nb_qcvboxwrap .sizeWrap .title span,
 .nb_qcvboxwrap .sizeWrap .size_boxList li a,
 .nb_qcvboxwrap .footSec .qty .sortBysec #nb_prdpg_qtysel_box,
 .nb_qcvboxwrap .footSec .qty .sortBysec:after,
@@ -388,7 +390,8 @@ nb_prdpg_fg label,
 .nb_prd_det_rightsec .subContent,
 .nb_prd_det_rightsec .col_Sec .col_lbl,
 .nb_prd_det_rightsec .availibility,
-.nb_prd_det_rightsec .sizeWrap p span,
+.nb_prd_det_rightsec .sizeWrap .title span,
+.product-details-section .attribute-value p span,
 .nb_prd_det_rightsec .sizeWrap .size_boxList li a,
 .nb_prd_det_rightsec .footSec .qty .sortBysec #nb_prdpg_qtysel_box,
 .nb_prd_det_rightsec .footSec .qty .sortBysec:after,
