--- a/WMS/Views/Theme/Default/Shared/_AttributeValueCreate.cshtml
+++ b/WMS/Views/Theme/Default/Shared/_AttributeValueCreate.cshtml
@@ -23,7 +23,8 @@
         }
         else
         {
-            @Html.HiddenFor(m => m.AttributeId);
+            @Html.HiddenFor(m => m.AttributeId)
+            @Html.Hidden("productAttributeValueMapId", (ViewBag.ProductAttributeValuesMapId as int?) ?? 0)
         }
         <div class="input-group h-100 justify-content-center align-items-center">
             <label class="col-md-4">Attribute Value<span style="color:red"> *</span></label>
